--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
                                 </div>
 
                                 <h3>HAMBURGERS</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur convallis nunc, at ullamcorper turpis gravida nec. 
-                                    Praesent eu ultrices nunc.</p>
+                                <p>receitas de hamburgers </p>
                             </div>
                         </div>
                         <div class="col-sm-4">
@@ -183,9 +182,8 @@
                                     <img src="assets/images/service2.png" alt="" />
                                 </div>
 
-                                <h3>muffins</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur convallis nunc, at ullamcorper turpis gravida nec. 
-                                    Praesent eu ultrices nunc.</p>
+                                <h3>doces</h3>
+                                <p>receitas de doces</p>
                             </div>
                         </div>
                         <div class="col-sm-4">
@@ -194,9 +192,8 @@
                                     <img src="assets/images/service3.png" alt="" />
                                 </div>
 
-                                <h3>salt and pepper</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur convallis nunc, at ullamcorper turpis gravida nec. 
-                                    Praesent eu ultrices nunc.</p>
+                                <h3>carne</h3>
+                                <p>receitas de carne</p>
                             </div>
                         </div>
 
@@ -204,34 +201,6 @@
                 </div>
             </div>
         </section>
-
-
-        <section id="choose" class="choose greenbackground">
-            <div class="container">
-                <div class="row">
-                    <div class="main_choose_area sections text-center">
-                        <div class="lesson_title">                      
-                            <p>why choose cooking TEMPLATE?</p>
-                        </div>
-                        <div class="main_choose_content">
-                            <div class="single_choose_content">
-                                <div class="singel_choose_img">
-                                    <img src="assets/images/choose.png" alt="" />
-                                </div>
-
-                                <h2>BECAUSE WE HAVE SKILLS</h2>
-                                <p>Suspendisse ac nulla eros. Vestibulum elementum placerat erat ac maximus. 
-                                    Aliquam quis nisi quis arcu dapibus ornare. Donec vel ex urna. Ut in odio ultricies 
-                                    mauris fringilla placerat commodo in augue. Integer at eros quam. Fusce ac lorem vehicula, 
-                                    rutrum velit pharetra, euismod nunc. Cum sociis natoque penatibus et magnis dis parturient
-                                    montes, nascetur ridiculus mus.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
 
 
 
@@ -327,7 +296,7 @@
                             </div>
 
                             <div class="portfolio_btn_area">
-                                <a href="" class="btn btn-md">LOAD MORE</a>
+                                <a href="" class="btn btn-md">mais receitas</a>
                             </div>
                             <div class="gap"></div>
                         </div>
@@ -338,36 +307,6 @@
 
 
 
-
-
-
-        <section id="newsletter" class="newsletter text-center">
-            <div class="container">
-                <div class="row">
-                    <div class="main_newsletter sections">
-                        <div class="col-sm-12">
-                            <div class="single_newsletter_head">
-                                <h2>JOIN OUR NEWSLETTER</h2>
-                                <p>Suspendisse ac nulla eros. Vestibulum elementum placerat erat ac maximus. 
-                                    Aliquam quis nisi quis arcu dapibus ornare. Donec vel ex urna. Ut in odio ultricies
-                                    mauris fringilla placerat commodo in augue. </p>
-                            </div>
-
-                            <div class="single_sewsletter_content">
-                                <div class="row">
-                                    <div class="col-sm-8 col-sm-offset-2">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" name="name" placeholder="first name" required="">
-                                            <input type="submit" value="SUBSCRIBE" class="btn btn-primary"/>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
 
         <section id="about" class="about">
@@ -573,102 +512,6 @@
         </section>
 
 
-
-        <section id="testimonial" class="testimonial greenbackground">
-            <div class="container">
-                <div class="row">
-                    <div class="main_testimonial sections">
-                        <div class="head_title text-center">
-                            <p>PEOPLE IMPRESSIONS</p>
-
-                        </div>
-                        <div class="col-md-12" data-wow-delay="0.2s">
-                            <div class="carousel slide" data-ride="carousel" id="quote-carousel">
-                                <!-- Bottom Carousel Indicators -->
-                                <ol class="carousel-indicators">
-                                    <li data-target="#quote-carousel" data-slide-to="0" class="active">
-                                        <img class="img-responsive " src="assets/images/team1.jpg" alt="">
-
-                                    </li>
-                                    <li data-target="#quote-carousel" data-slide-to="1">
-                                        <img class="img-responsive" src="assets/images/team1.jpg" alt="">
-
-                                    </li>
-                                    <li data-target="#quote-carousel" data-slide-to="2">
-                                        <img class="img-responsive" src="assets/images/team1.jpg" alt="">
-
-                                    </li>
-                                    <li data-target="#quote-carousel" data-slide-to="3">
-                                        <img class="img-responsive" src="assets/images/team1.jpg" alt="">
-
-                                    </li>
-                                </ol>
-
-                                <!-- Carousel Slides / Quotes -->
-                                <div class="carousel-inner text-center">
-
-                                    <!-- Quote 1 -->
-                                    <div class="item active">
-                                        <blockquote>
-                                            <div class="row">
-                                                <div class="col-sm-8 col-sm-offset-2">
-                                                    <p class="impress">IMPRESSED ABOUT OUR THEME? </p>
-                                                    <div class="whiseparator"></div>
-                                                    <small>Someone famous</small>
-                                                </div>
-                                            </div>
-                                        </blockquote>
-                                    </div>
-                                    <!-- Quote 2 -->
-                                    <div class="item">
-                                        <blockquote>
-                                            <div class="row">
-                                                <div class="col-sm-8 col-sm-offset-2">
-                                                    <p class="impress">IMPRESSED ABOUT OUR THEME? </p>
-                                                    <div class="whiseparator"></div>
-                                                    <small>Someone famous</small>
-                                                </div>
-                                            </div>
-                                        </blockquote>
-                                    </div>
-                                    <!-- Quote 3 -->
-                                    <div class="item">
-                                        <blockquote>
-                                            <div class="row">
-                                                <div class="col-sm-8 col-sm-offset-2">
-                                                    <p class="impress">IMPRESSED ABOUT OUR THEME?</p>
-                                                    <div class="whiseparator"></div>
-                                                    <small>Someone famous</small>
-                                                </div>
-                                            </div>
-                                        </blockquote>
-                                    </div>
-                                    <!-- Quote 4 -->
-                                    <div class="item">
-                                        <blockquote>
-                                            <div class="row">
-                                                <div class="col-sm-8 col-sm-offset-2">
-                                                    <p class="impress">IMPRESSED ABOUT OUR THEME?</p>
-                                                    <div class="whiseparator"></div>
-                                                    <small>Someone famous</small>
-                                                </div>
-                                            </div>
-                                        </blockquote>
-                                    </div>
-                                </div>
-
-                                <!-- Carousel Buttons Next/Prev -->
-                                <!-- <a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
-                                 <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>-->
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-
-
         <section id="counter" class="counter">
             <div class="container-fluid">
                 <div class="row">
@@ -724,20 +567,20 @@
 
                             <div class="col-sm-4  col-xs-12">
                                 <div class="single_widget wow fadeIn" data-wow-duration="800ms">
-                                    <h4 class="footer_title">CONTACT</h4>
+                                    <h4 class="footer_title">CONTATO</h4>
                                     <div class="separator4"></div>
                                     <ul>
-                                        <li><a href=""><i class="fa fa-envelope"></i> info@guitarchoose.com</a></li>
-                                        <li><a href=""><i class="fa fa-phone"></i> 0123 456 789 0112</a></li>
-                                        <li><a href=""><i class="fa fa-map-marker"></i> Greenplatz Ben 29, Germany 60435</a></li>
-                                        <li><a href=""><i class="fa fa-fax"></i> (0012) 654 356 445</a></li>
+                                        <li><a href=""><i class="fa fa-envelope"></i> foodcraftme@gmail.com</a></li>
+                                        <li><a href=""><i class="fa fa-phone"></i> texto</a></li>
+                                        <li><a href=""><i class="fa fa-map-marker"></i> texto</a></li>
+                                        <li><a href=""><i class="fa fa-fax"></i>        texto</a></li>
                                     </ul>
                                 </div>
                             </div>
 
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_widget wow fadeIn" data-wow-duration="800ms">
-                                    <h4 class="footer_title">LATEST NEWS</h4>
+                                    <h4 class="footer_title">NOVIDADES</h4>
                                     <div class="separator4"></div>
 
                                     <div class="footer_gellary">
@@ -764,7 +607,7 @@
                                         Etiam vehicula efficitur mi.</p>
 
 
-                                    <a class="weblink" href="">www.cookingschool.com</a>
+                                    <a class="weblink" href="">foodcraftme@gmail.com</a>
                                 </div>
                             </div>
                         </div>
@@ -787,7 +630,7 @@
 
                         <div class="col-sm-6 col-xs-12">
                             <div class="copyright_text">
-                                <p class=" wow fadeInRight" data-wow-duration="1s">Made with <i class="fa fa-heart"></i> by <a href="http://bootstrapthemes.co">Bootstrap Themes</a>2016. All Rights Reserved</p>
+                                <p class=" wow fadeInRight" data-wow-duration="1s">Made by Bernardo Viegas <a href="https://www.foodcraft.me">foodcraft.me</a></p>
                             </div>
                         </div>
 
