--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
 
                         <div class="col-sm-6 col-xs-12">
                             <div class="copyright_text">
-                                <p class=" wow fadeInRight" data-wow-duration="1s">Made by Bernardo Viegas <a href="https://www.foodcraft.me">foodcraft.me</a></p>
+                                <p class=" wow fadeInRight" data-wow-duration="1s">Made by <font style="font-family: Papyrus;">Bernardo Viegas</font> <a href="https://www.foodcraft.me">foodcraft.me</a></p>
                             </div>
                         </div>
 
