--- a/index.html
+++ b/index.html
@@ -334,9 +334,8 @@
                                                     <img src="assets/images/s_ab1.png" alt="" />
                                                 </div>
                                                 <div class="right_about_top_content">
-                                                    <h3>COOKCING BOOK</h3>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur convallis nunc, 
-                                                        at ullamcorper turpis gravida nec. Praesent eu ultrices nunc.</p>
+                                                    <h3>RECITAS TUGA</h3>
+                                                    <p>Receitas</p>
                                                 </div>
                                             </div>
                                             <div class="right_about_bottom_cotent">
@@ -364,9 +363,8 @@
                                                     <img src="assets/images/s_ab2.png" alt="" />
                                                 </div>
                                                 <div class="right_about_top_content">
-                                                    <h3>COOKCING BOOK</h3>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur convallis nunc, 
-                                                        at ullamcorper turpis gravida nec. Praesent eu ultrices nunc.</p>
+                                                    <h3>VEGAN</h3>
+                                                    <p>Receitas</p>
                                                 </div>
                                             </div>
                                             <div class="right_about_bottom_cotent">
@@ -393,9 +391,8 @@
                                                     <img src="assets/images/s_ab3.png" alt="" />
                                                 </div>
                                                 <div class="right_about_top_content">
-                                                    <h3>COOKCING BOOK</h3>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur convallis nunc, 
-                                                        at ullamcorper turpis gravida nec. Praesent eu ultrices nunc.</p>
+                                                    <h3>sobremesas</h3>
+                                                    <p>receitas</p>
                                                 </div>
                                             </div>
                                             <div class="right_about_bottom_cotent">
@@ -601,10 +598,8 @@
                                     <div class="footer_logo">
                                         <img src="assets/images/footerlogo.png" alt="" />
                                     </div>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. 
-                                        Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit. </p>
-                                    <p>Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris. 
-                                        Etiam vehicula efficitur mi.</p>
+                                    <p>texto </p>
+                                    <p>texto</p>
 
 
                                     <a class="weblink" href="">foodcraftme@gmail.com</a>
@@ -634,14 +629,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 col-xs-12">
-                            <div class="footer_socail">
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-rss"></i></a>
-                            </div>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
